Download iOS SDK

--- a/plugin.xml
+++ b/plugin.xml
@@ -75,7 +75,8 @@
 	</platform>
 
 	<platform name="ios">
-
+		<hook type="before_plugin_install" src="scripts/downloadiOSSDK.js" />
+		
 		<config-file target="config.xml" parent="/*">
 			<feature name="VidyoIOPlugin">
 				<param name="ios-package" value="VidyoIOPlugin" onload="true"/>
